--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="d-flex justify-content-evenly">
                         <div class="col-3 d-md-flex justify-content-center">
                             <div class="card item-cart" style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
@@ -279,7 +279,7 @@
                         </div>
                         <div class="col-3 d-md-flex justify-content-center ">
                             <div class="card item-cart " style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
@@ -291,7 +291,7 @@
                         </div>
                         <div class="col-3 d-md-flex justify-content-center">
                             <div class="card item-cart" style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
@@ -306,7 +306,7 @@
                     <div class="d-flex justify-content-evenly">
                         <div class="col-3 d-md-flex justify-content-center">
                             <div class="card item-cart" style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
@@ -318,7 +318,7 @@
                         </div>
                         <div class="col-3 d-md-flex justify-content-center ">
                             <div class="card item-cart " style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
@@ -330,7 +330,7 @@
                         </div>
                         <div class="col-3 d-md-flex justify-content-center">
                             <div class="card item-cart" style="width: 22rem;">
-                                <img src="../Assets/img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg"
+                                <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
