--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="Assets/css/normalize.css">
     <link rel="stylesheet" href="Assets/css/responsive.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <script src="Assets/js/cart.js"></script>
 </head>
 
@@ -40,7 +41,7 @@
                             </li>
 
                             <li class="nav-item ">
-                                <a class="nav-link navBtn-main " href="#ContactUs">ContactUs</a>
+                                <a class="nav-link navBtn-main " href="#contactUs">ContactUs</a>
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link navBtn-main"><i class='bx bx-cart-alt' type="button"
@@ -156,7 +157,7 @@
                     </div>
 
                     <div class="row cart-items">
-                        
+
                         <!--  <div class="col-lg-12 cart-item-cols">
                             <div class="card cart-cards">
                                 <div class="card-body">
@@ -416,8 +417,211 @@
 
                 </div>
                 <div class="col d-md-flex justify-content-center see-more-btn">
-                    <button class=" btn btn-primary btn-main d-md-flex justify-content-center">lord More</button>
+                    <button class=" btn btn-primary btn-main d-md-flex justify-content-center">Load More</button>
                 </div>
+            </section>
+
+            <!-- Contact Us -->
+            <section id="testamonial">
+                <div class="row d-md-flex justify-content-center">
+
+                    <h2 class="d-md-flex justify-content-center ">What They Are Saying</h2>
+                    <h3 class="d-md-flex justify-content-center ">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Saepe rerum debitis atque ipsum incidunt?</h3>
+
+                </div>
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="testamonial">
+                                <div class="row d-md-flex justify-content-center">
+                                    <div class="testamonial-img ">
+                                        <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
+                                            alt="...">
+                                    </div>
+                                    <div class="testamonial-contet ">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+                                            voluptas architecto odit eum a minima molestias? Facilis architecto
+                                            corporis perferendis laboriosam consequatur ab repudiandae, aperiam
+                                            obcaecati, magni molestias beatae repellat?</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="testamonial">
+                                <div class="row d-md-flex justify-content-center">
+                                    <div class="testamonial-img ">
+                                        <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
+                                            alt="...">
+                                    </div>
+                                    <div class="testamonial-contet ">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+                                            voluptas architecto odit eum a minima molestias? Facilis architecto
+                                            corporis perferendis laboriosam consequatur ab repudiandae, aperiam
+                                            obcaecati, magni molestias beatae repellat?</p>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="testamonial">
+                                <div class="row d-md-flex justify-content-center">
+                                    <div class="testamonial-img ">
+                                        <img src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
+                                            alt="...">
+                                    </div>
+                                    <div class="testamonial-contet ">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+                                            voluptas architecto odit eum a minima molestias? Facilis architecto
+                                            corporis perferendis laboriosam consequatur ab repudiandae, aperiam
+                                            obcaecati, magni molestias beatae repellat?</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </section>
+
+            <section id="contactUs">
+                <div class="row">
+                    <div class="row d-md-flex justify-content-center contactus-head">
+                        <h2 class="head-text  d-md-flex justify-content-center ">CONTACT US</h2>
+                        <p class="col-8 center contact-text">Any Doubts <br />
+                            Lets us help you</p>
+                    </div>
+                    <div class="contact-container  ">
+                        <div class="contact-item-container center ">
+
+                            <div class="screen">
+
+                                <div class="screen-body">
+                                    <div class="screen-body-item left">
+
+                                        <div class="screen-body-item">
+                                            <div class="app-form">
+                                                <div class="app-form-group">
+                                                    <input class="app-form-control" placeholder="NAME">
+                                                </div>
+                                                <div class="app-form-group">
+                                                    <input class="app-form-control" placeholder="EMAIL">
+                                                </div>
+                                                <div class="app-form-group">
+                                                    <input class="app-form-control" placeholder="CONTACT NO">
+                                                </div>
+                                                <div class="app-form-group message">
+                                                    <input class="app-form-control" placeholder="MESSAGE">
+                                                </div>
+                                                <div class="app-form-group buttons">
+                                                    <button class="app-form-button">CANCEL</button>
+                                                    <button class="app-form-button">SEND</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+
+
+                    </div>
+
+                </div>
+            </section>
+
+            <section id="footer">
+
+
+                <footer class="text-center text-lg-start text-dark" style="background-color: #ffffff">
+
+
+
+                    <section class="">
+                        <div class="container text-center text-md-start mt-5">
+
+                            <div class="row mt-3">
+
+                                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+                                    <h6 class="text-uppercase fw-bold">WTM</h6>
+                                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                        style="width: 60px; background-color: #FF7B00; height: 2px" />
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti molestias vel
+                                        error officiis expedita a facere inventore harum minima provident? Non nisi
+                                        commodi blanditiis facilis tenetur ad repudiandae cupiditate cumque.
+                                    </p>
+                                </div>
+
+                                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                                    <!-- Links -->
+                                    <h6 class="text-uppercase fw-bold">Products</h6>
+                                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                        style="width: 60px; background-color: #FF7B00; height: 2px" />
+                                    <p>
+                                        <a href="#!" class="text-dark">Toys 1</a>
+                                    </p>
+                                    <p>
+                                        <a href="#!" class="text-dark">Toys 2</a>
+                                    </p>
+                                    <p>
+                                        <a href="#!" class="text-dark">Toys 3</a>
+                                    </p>
+                                    <p>
+                                        <a href="#!" class="text-dark">Toys 4</a>
+                                    </p>
+                                </div>
+                                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                                    <h6 class="text-uppercase fw-bold">Useful links</h6>
+                                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                        style="width: 60px; background-color: #FF7B00; height: 2px" />
+                                    <p>
+                                        <a href="#!" class="text-dark">Your Account</a>
+                                    </p>
+
+                                    <p>
+                                        <a href="#!" class="text-dark">Shipping Rates</a>
+                                    </p>
+                                    <p>
+                                        <a href="#!" class="text-dark">Help</a>
+                                    </p>
+                                </div>
+
+
+                                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                                    <h6 class="text-uppercase fw-bold">Contact</h6>
+                                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                        style="width: 60px; background-color: #FF7B00; height: 2px" />
+                                    <p><i class="fas fa-home mr-3"></i> 100, Moragalla, Beruwala, Sri Lanka</p>
+                                    <p><i class="fas fa-envelope mr-3"></i> abeetha.dilushan@gmail.com</p>
+                                    <p><i class="fas fa-phone mr-3"></i> + 94 342 279 298</p>
+                                    <p><i class="fas fa-print mr-3"></i> + 94 763 314 450</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <div class="text-center p-3">
+                        © 2022 Copyright:
+                        <a class="text-dark" href="https://mdbootstrap.com/">Abheetha Dilushan</a>
+                    </div>
+
+                </footer>
+
+
             </section>
         </section>
     </div>
@@ -437,7 +641,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script>
         var nav = document.querySelector('nav');
 
@@ -448,6 +652,19 @@
             } else {
                 nav.classList.remove('sticky');
             }
+        });
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
         });
     </script>
 
