--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 
             <div class="row">
 
-                <div class="col">
+                <div class="col-6">
 
                     <div class="container header-container p-5">
                         <h1 class="header-container-text"> Test Lorem ipsum dolor sit amet <br> consectetur adipisicing
                             elit. </h1>
-                        <p class="header-container-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                        <p class="header-container-text header-container-text-2">Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Quas
                             neque a unde libero sit nulla
                             atque nihil <br> fugit nisi, praesentium error impedit repellat quae quasi? <br> Nulla autem
                             exercitationem excepturi quisquam.</p>
@@ -77,7 +78,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-6">
                     <div class="container p-5">
                         <div class="bg-curcle"> </div>
                         <img src="Assets/Img/car.png" class="img-fluid car-img" alt="carimg">
@@ -93,11 +94,11 @@
 
                     <div class="card card-styl">
                         <div class="card-body p-3 m-4">
-                            <div class="card-title">
-                                <i class='bx bx-globe'></i>
+                            <div class="card-title ">
+                                <i class='bx bx-globe card-icon'></i>
                             </div>
+                            <p><b>Lorem ipsum dolor sit amet</b> </p>
 
-                            Lorem ipsum dolor sit amet
                         </div>
                     </div>
 
@@ -107,10 +108,10 @@
                     <div class="card card-styl">
                         <div class="card-body p-3 m-4">
                             <div class="card-title">
-                                <i class='bx bx-globe'></i>
+                                <i class='bx bx-globe card-icon'></i>
                             </div>
 
-                            Lorem ipsum dolor sit amet
+                            <p><b>Lorem ipsum dolor sit amet</b> </p>
                         </div>
                     </div>
                 </div>
@@ -119,10 +120,10 @@
                     <div class="card card-styl">
                         <div class="card-body p-3 m-4">
                             <div class="card-title">
-                                <i class='bx bx-globe'></i>
+                                <i class='bx bx-globe card-icon'></i>
                             </div>
 
-                            Lorem ipsum dolor sit amet
+                            <p><b>Lorem ipsum dolor sit amet</b> </p>
                         </div>
                     </div>
                 </div>
@@ -276,7 +277,7 @@
                         <div class="col-8 about-us-text">
 
                             <div class="col-12 ">
-                                <p>
+                                <p class="about-us-text-2">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus commodo malesuada
                                     ut
                                     orci.
@@ -312,9 +313,10 @@
                     <p class="d-md-flex justify-content-center ">Lorem ipsum, dolor sit amet consectetur adipisicing
                         elit. Voluptas a, nesciunt corrupti sunt molestias doloremque id magni itaque optio, eos cum
                         impedit, error asperiores deleniti illo ipsam consequatur fugiat officiis!</p>
-                    <div class="d-flex justify-content-evenly product-item-container">
+                    <div
+                        class="row d-flex justify-content-evenly row d-flex justify-content-evenly product-item-container">
 
-                        <div class="col-3 d-md-flex justify-content-center">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart" style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -331,7 +333,7 @@
                             </div>
                         </div>
 
-                        <div class="col-3 d-md-flex justify-content-center">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart" style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -348,7 +350,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 d-md-flex justify-content-center">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart" style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -366,8 +368,8 @@
 
                     </div>
 
-                    <div class="d-flex justify-content-evenly">
-                        <div class="col-3 d-md-flex justify-content-center">
+                    <div class="row d-flex justify-content-evenly">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart" style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -382,7 +384,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 d-md-flex justify-content-center ">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart " style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -397,7 +399,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 d-md-flex justify-content-center">
+                        <div class="col-md-3 d-md-flex justify-content-center product-cards">
                             <div class="card item-cart" style="width: 22rem;">
                                 <img class="shop-item-image"
                                     src="https://images.unsplash.com/photo-1625651417672-c9aa0a62f269?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1053&q=80"
@@ -421,9 +423,9 @@
                 </div>
             </section>
 
-            <!-- Contact Us -->
+
             <section id="testamonial">
-                <div class="row d-md-flex justify-content-center">
+                <div class="row d-md-flex justify-content-center testamonial">
 
                     <h2 class="d-md-flex justify-content-center ">What They Are Saying</h2>
                     <h3 class="d-md-flex justify-content-center ">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -490,7 +492,7 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </section>
-
+            <!-- Contact Us -->
             <section id="contactUs">
                 <div class="row">
                     <div class="row d-md-flex justify-content-center contactus-head">
