--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <img class="aboutus-img" src="../Assets/Img/hi.png" alt="">
                     </div>
                     <div class="col m-4 about-us-text">
-                        <h2 class="head-text about-us-text">AboutUs</h2>
+                        <h2 class="head-text about-us-text">About Us</h2>
                         <h1 class="about-us-text-head">Lorem ipsum dolor
                             sit amet
                         </h1>
@@ -307,10 +307,10 @@
             </section>
             <!-- Products -->
             <section id="products">
-                <div class="row ">
+                <div class="row product-container">
                     <h2 class="head-text product-head-text d-md-flex justify-content-center ">Products</h2>
-                    <h3 class="d-md-flex justify-content-center ">EXPLORE OUR BEST TOYS</h3>
-                    <p class="d-md-flex justify-content-center ">Lorem ipsum, dolor sit amet consectetur adipisicing
+                    <h3 class="d-md-flex product-head-text justify-content-center ">EXPLORE OUR BEST TOYS</h3>
+                    <p class="d-md-flex  justify-content-center ">Lorem ipsum, dolor sit amet consectetur adipisicing
                         elit. Voluptas a, nesciunt corrupti sunt molestias doloremque id magni itaque optio, eos cum
                         impedit, error asperiores deleniti illo ipsam consequatur fugiat officiis!</p>
                     <div
@@ -425,7 +425,7 @@
 
 
             <section id="testamonial">
-                <div class="row d-md-flex justify-content-center testamonial">
+                <div class="row d-md-flex justify-content-center testamonial-head">
 
                     <h2 class="d-md-flex justify-content-center ">What They Are Saying</h2>
                     <h3 class="d-md-flex justify-content-center ">Lorem ipsum dolor sit amet consectetur adipisicing
