--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="container header-container-photo ">
 
-                        <img src="../\Assets\Img\circle-1.png" alt="">
+                        <img src="../Assets/Img/circle-1.png" alt="">
                     </div>
                 </div>
 
@@ -297,7 +297,7 @@
                                 <button class="btn btn-primary justify-content-md-end btn-main">Contact Us</button>
 
                             </div>
-                            <img class="wooden-circle-2" src="../\Assets\Img\circle-1.png" alt="">
+                            <img class="wooden-circle-2" src="../Assets/Img/circle-1.png" alt="">
                         </div>
 
 
